style.css
body {
    display: flex;
    flex-direction: column;
    background-color: rgb(31, 41, 55);
    flex: 1 1 auto;
   
}



.header {
    display: flex;
    /* justify-content: space-evenly; */
    background-color: rgb(31, 41, 55);
    font-size: 24px;
    color: #f9faf8;
    /* margin: 20px 180px; */
    justify-content: space-between;
    margin-bottom: 60px;
    /* flex: 1; */
    /* padding: 15px 45px; */
}

ul {
    display: flex;
    align-items: center;
    gap: 20px;
    margin: 0px;
    list-style-type: none;
}

.advertisement {
    display: flex;
    background-color: rgb(31, 41, 55);
    font-size: 48px;
    color: #f9faf8;
    flex-wrap: wrap;
    /* padding-top: 80px; */
    flex-direction: column;
    color: rgb(249, 250, 248);
    flex: 1;
}

.content{
    display: flex;
    justify-content:space-evenly;
    
    

}

h2{
    text-align: center;
    margin-top: 0;
}

#description{
    
    font-size: 24px;
}

button{
    background-color: #3882F6;
    width: 80px;
    color: white;
    margin-bottom: 80px;
}

/*I think the padding may be affecting the spacing*/
.boxes{
    display: flex;
    flex-direction: column;
    /* justify-content: center; */
    /* align-items: flex-start; */
    background-color: white;
    padding: 20px;
    flex: 1;
}

/* .top{
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    font-weight: 700;
} */

.row{
    display: flex;
    justify-content: center;
    justify-content: space-evenly;
}

.caption{
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
}

.row img{
    width: 300px;
    height: 300px;
}

img{
    object-fit: cover;
    margin-bottom: auto;
}


.row p{
    font-size: 16px;
    margin-top: 0;
    
}

.quote{
    font-size: 36px;
    background-color: #E5E7EB;
    padding: 120px 20px;
    /*I could possibly bring the padding back since I found the issue */
    /*It worked!*/
    /* height: 40%; */
    font-style: italic;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    
}

.signature{
    display: flex;
    justify-content: flex-end;
    width: 60%;
    
}

.register #top {
   display: flex;
   justify-content: flex-start;
   font-size: 22px;
   font-weight: 700;
}

.register{
    background-color: white;
    /* padding: 90px 20px; */
    height: 40%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.register .right{
    box-sizing: border-box;
    padding: 10px 30px;
    border: 2px solid gray;
    border-radius: 8px;
    border-color: white;
    font-weight: bold;
}

.register .left{
    font-size: 15px;
}

.register button{
    border: none;
    border-radius: 8px;
    background-color: #3882F6;
    /*May have to set a height and width instead of setting the padding*/
    height: 100px;
    width: 1000px;
    margin-bottom: 0;
    display: flex;
    white-space: nowrap;
    justify-content: space-evenly;
    align-items: center;
    font-size: 18px;
    color: #F9FAF8;
}

footer{
    color: white;
    height: 5%;
    display: flex;
    justify-content: center;
    align-items: center;
}


/* .memo{
    display: flex;
    justify-content: flex-start;

    
} */

/* h2 .boxes {
    display: flex;
    align-items: flex-start;
} */

